src/cpp/include/mujoco/mujoco.h


MJAPI extern void  (*mju_user_error)(const char*);
MJAPI extern void  (*mju_user_warning)(const char*);
MJAPI extern void* (*mju_user_malloc)(size_t);
MJAPI extern void  (*mju_user_free)(void*);
MJAPI extern mjfGeneric  mjcb_passive;
MJAPI extern mjfGeneric  mjcb_control;
MJAPI extern mjfConFilt  mjcb_contactfilter;
MJAPI extern mjfSensor   mjcb_sensor;
MJAPI extern mjfTime     mjcb_time;
MJAPI extern mjfAct      mjcb_act_dyn;
MJAPI extern mjfAct      mjcb_act_gain;
MJAPI extern mjfAct      mjcb_act_bias;
MJAPI extern mjfCollision mjCOLLISIONFUNC[mjNGEOMTYPES][mjNGEOMTYPES];
MJAPI extern const char* mjDISABLESTRING[mjNDISABLE];
MJAPI extern const char* mjENABLESTRING[mjNENABLE];
MJAPI extern const char* mjTIMERSTRING[mjNTIMER];
MJAPI extern const char* mjLABELSTRING[mjNLABEL];
MJAPI extern const char* mjFRAMESTRING[mjNFRAME];
MJAPI extern const char* mjVISSTRING[mjNVISFLAG][3];
MJAPI extern const char* mjRNDSTRING[mjNRNDFLAG][3];
MJAPI void mj_defaultVFS(mjVFS* vfs);
MJAPI int mj_addFileVFS(mjVFS* vfs, const char* directory, const char* filename);
MJAPI int mj_addBufferVFS(mjVFS* vfs, const char* name, const void* buffer, int nbuffer);
MJAPI int mj_deleteFileVFS(mjVFS* vfs, const char* filename);
MJAPI void mj_deleteVFS(mjVFS* vfs);
MJAPI mjModel* mj_loadXML(const char* filename, const mjVFS* vfs, char* error, int error_sz);
MJAPI mjSpec* mj_parseXML(const char* filename, const mjVFS* vfs, char* error, int error_sz);
MJAPI mjSpec* mj_parseXMLString(const char* xml, const mjVFS* vfs, char* error, int error_sz);
MJAPI mjModel* mj_compile(mjSpec* s, const mjVFS* vfs);
MJAPI int mj_recompile(mjSpec* s, const mjVFS* vfs, mjModel* m, mjData* d);
MJAPI int mj_saveLastXML(const char* filename, const mjModel* m, char* error, int error_sz);
MJAPI void mj_freeLastXML(void);
MJAPI int mj_saveXMLString(const mjSpec* s, char* xml, int xml_sz, char* error, int error_sz);
MJAPI int mj_saveXML(const mjSpec* s, const char* filename, char* error, int error_sz);
MJAPI void mj_step(const mjModel* m, mjData* d);
MJAPI void mj_step1(const mjModel* m, mjData* d);
MJAPI void mj_step2(const mjModel* m, mjData* d);
MJAPI void mj_forward(const mjModel* m, mjData* d);
MJAPI void mj_inverse(const mjModel* m, mjData* d);
MJAPI void mj_forwardSkip(const mjModel* m, mjData* d, int skipstage, int skipsensor);
MJAPI void mj_inverseSkip(const mjModel* m, mjData* d, int skipstage, int skipsensor);
MJAPI void mj_defaultLROpt(mjLROpt* opt);
MJAPI void mj_defaultSolRefImp(mjtNum* solref, mjtNum* solimp);
MJAPI void mj_defaultOption(mjOption* opt);
MJAPI void mj_defaultVisual(mjVisual* vis);
MJAPI mjModel* mj_copyModel(mjModel* dest, const mjModel* src);
MJAPI void mj_saveModel(const mjModel* m, const char* filename, void* buffer, int buffer_sz);
MJAPI mjModel* mj_loadModel(const char* filename, const mjVFS* vfs);
MJAPI void mj_deleteModel(mjModel* m);
MJAPI int mj_sizeModel(const mjModel* m);
MJAPI mjData* mj_makeData(const mjModel* m);
MJAPI mjData* mj_copyData(mjData* dest, const mjModel* m, const mjData* src);
MJAPI void mj_resetData(const mjModel* m, mjData* d);
MJAPI void mj_resetDataDebug(const mjModel* m, mjData* d, unsigned char debug_value);
MJAPI void mj_resetDataKeyframe(const mjModel* m, mjData* d, int key);
MJAPI void mj_markStack(mjData* d);
MJAPI void mj_freeStack(mjData* d);
MJAPI void* mj_stackAllocByte(mjData* d, size_t bytes, size_t alignment);
MJAPI mjtNum* mj_stackAllocNum(mjData* d, size_t size);
MJAPI int* mj_stackAllocInt(mjData* d, size_t size);
MJAPI void mj_deleteData(mjData* d);
MJAPI void mj_resetCallbacks(void);
MJAPI void mj_setConst(mjModel* m, mjData* d);