src/mujoco_c.rs

pub type mjuiThemeSpacing = mjuiThemeSpacing_;
#[repr(C)]
#[derive(Debug, Clone, Copy)]
pub struct mjuiThemeColor_ {
    pub master: [f32; 3usize],
    pub thumb: [f32; 3usize],
    pub secttitle: [f32; 3usize],
    pub secttitle2: [f32; 3usize],
    pub secttitleuncheck: [f32; 3usize],
    pub secttitleuncheck2: [f32; 3usize],
    pub secttitlecheck: [f32; 3usize],
    pub secttitlecheck2: [f32; 3usize],
    pub sectfont: [f32; 3usize],
    pub sectsymbol: [f32; 3usize],
    pub sectpane: [f32; 3usize],
    pub separator: [f32; 3usize],
    pub separator2: [f32; 3usize],
    pub shortcut: [f32; 3usize],
    pub fontactive: [f32; 3usize],
    pub fontinactive: [f32; 3usize],
    pub decorinactive: [f32; 3usize],
    pub decorinactive2: [f32; 3usize],
    pub button: [f32; 3usize],
    pub check: [f32; 3usize],
    pub radio: [f32; 3usize],
    pub select: [f32; 3usize],
    pub select2: [f32; 3usize],
    pub slider: [f32; 3usize],
    pub slider2: [f32; 3usize],
    pub edit: [f32; 3usize],
    pub edit2: [f32; 3usize],
    pub cursor: [f32; 3usize],
}
pub type mjuiThemeColor = mjuiThemeColor_;
#[repr(C)]
#[derive(Debug, Clone, Copy)]
pub struct mjuiItemSingle_ {
    pub modifier: ::std::os::raw::c_int,
    pub shortcut: ::std::os::raw::c_int,
}
#[repr(C)]
#[derive(Debug, Clone, Copy)]
pub struct mjuiItemMulti_ {
    pub nelem: ::std::os::raw::c_int,
    pub name: [[::std::os::raw::c_char; 40usize]; 35usize],
}
#[repr(C)]
#[derive(Debug, Clone, Copy)]
pub struct mjuiItemSlider_ {
    pub range: [f64; 2usize],
    pub divisions: f64,
}
#[repr(C)]
#[derive(Debug, Clone, Copy)]
pub struct mjuiItemEdit_ {
    pub nelem: ::std::os::raw::c_int,
    pub range: [[f64; 2usize]; 7usize],
}
#[repr(C)]
#[derive(Clone, Copy)]
pub struct mjuiItem_ {
    pub type_: ::std::os::raw::c_int,
    pub name: [::std::os::raw::c_char; 40usize],
    pub state: ::std::os::raw::c_int,
    pub pdata: *mut ::std::os::raw::c_void,
    pub sectionid: ::std::os::raw::c_int,
    pub itemid: ::std::os::raw::c_int,
    pub userid: ::std::os::raw::c_int,
    pub __bindgen_anon_1: mjuiItem___bindgen_ty_1,
    pub rect: mjrRect,
    pub skip: ::std::os::raw::c_int,
}
#[repr(C)]
#[derive(Clone, Copy)]
pub struct mjuiItem___bindgen_ty_1 {
    pub single: __BindgenUnionField<mjuiItemSingle_>,
    pub multi: __BindgenUnionField<mjuiItemMulti_>,
    pub slider: __BindgenUnionField<mjuiItemSlider_>,
    pub edit: __BindgenUnionField<mjuiItemEdit_>,
    pub bindgen_union_field: [u64; 176usize],
}
pub type mjuiItem = mjuiItem_;
#[repr(C)]
#[derive(Clone, Copy)]
pub struct mjuiSection_ {
    pub name: [::std::os::raw::c_char; 40usize],
    pub state: ::std::os::raw::c_int,
    pub modifier: ::std::os::raw::c_int,
    pub shortcut: ::std::os::raw::c_int,
    pub checkbox: ::std::os::raw::c_int,
    pub nitem: ::std::os::raw::c_int,
    pub item: [mjuiItem; 200usize],
    pub rtitle: mjrRect,
    pub rcontent: mjrRect,
    pub lastclick: ::std::os::raw::c_int,
}
pub type mjuiSection = mjuiSection_;
#[repr(C)]
#[derive(Clone)]
pub struct mjUI_ {
    pub spacing: mjuiThemeSpacing,
    pub color: mjuiThemeColor,
    pub predicate: mjfItemEnable,
    pub userdata: *mut ::std::os::raw::c_void,
    pub rectid: ::std::os::raw::c_int,
    pub auxid: ::std::os::raw::c_int,
    pub radiocol: ::std::os::raw::c_int,
    pub width: ::std::os::raw::c_int,
    pub height: ::std::os::raw::c_int,
    pub maxheight: ::std::os::raw::c_int,
    pub scroll: ::std::os::raw::c_int,
    pub mousesect: ::std::os::raw::c_int,
    pub mouseitem: ::std::os::raw::c_int,
    pub mousehelp: ::std::os::raw::c_int,
    pub mouseclicks: ::std::os::raw::c_int,
    pub mousesectcheck: ::std::os::raw::c_int,
    pub editsect: ::std::os::raw::c_int,
    pub edititem: ::std::os::raw::c_int,
    pub editcursor: ::std::os::raw::c_int,
    pub editscroll: ::std::os::raw::c_int,
    pub edittext: [::std::os::raw::c_char; 300usize],
    pub editchanged: *mut mjuiItem,
    pub nsect: ::std::os::raw::c_int,
    pub sect: [mjuiSection; 10usize],
}
pub type mjUI = mjUI_;
#[repr(C)]
#[derive(Debug, Clone, Copy)]
pub struct mjuiDef_ {
    pub type_: ::std::os::raw::c_int,
    pub name: [::std::os::raw::c_char; 40usize],
    pub state: ::std::os::raw::c_int,
    pub pdata: *mut ::std::os::raw::c_void,
    pub other: [::std::os::raw::c_char; 300usize],
    pub otherint: ::std::os::raw::c_int,
}
pub type mjuiDef = mjuiDef_;
unsafe extern "C" {
    pub static mut mju_user_error:
        ::std::option::Option<unsafe extern "C" fn(arg1: *const ::std::os::raw::c_char)>;
}
unsafe extern "C" {
    pub static mut mju_user_warning:
        ::std::option::Option<unsafe extern "C" fn(arg1: *const ::std::os::raw::c_char)>;
}
unsafe extern "C" {
    pub static mut mju_user_malloc:
        ::std::option::Option<unsafe extern "C" fn(arg1: usize) -> *mut ::std::os::raw::c_void>;
}
unsafe extern "C" {
    pub static mut mju_user_free:
        ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>;
}
unsafe extern "C" {
    pub static mut mjcb_passive: mjfGeneric;
}
unsafe extern "C" {
    pub static mut mjcb_control: mjfGeneric;
}
unsafe extern "C" {
    pub static mut mjcb_contactfilter: mjfConFilt;
}
unsafe extern "C" {
    pub static mut mjcb_sensor: mjfSensor;
}
unsafe extern "C" {
    pub static mut mjcb_time: mjfTime;
}
unsafe extern "C" {
    pub static mut mjcb_act_dyn: mjfAct;
}
unsafe extern "C" {
    pub static mut mjcb_act_gain: mjfAct;
}
unsafe extern "C" {
    pub static mut mjcb_act_bias: mjfAct;
}
unsafe extern "C" {
    pub static mut mjCOLLISIONFUNC: [[mjfCollision; 9usize]; 9usize];
}
unsafe extern "C" {
    pub static mut mjDISABLESTRING: [*const ::std::os::raw::c_char; 17usize];
}
unsafe extern "C" {
    pub static mut mjENABLESTRING: [*const ::std::os::raw::c_char; 6usize];
}
unsafe extern "C" {
    pub static mut mjTIMERSTRING: [*const ::std::os::raw::c_char; 15usize];
}
unsafe extern "C" {
    pub static mut mjLABELSTRING: [*const ::std::os::raw::c_char; 17usize];
}
unsafe extern "C" {
    pub static mut mjFRAMESTRING: [*const ::std::os::raw::c_char; 8usize];
}
unsafe extern "C" {
    pub static mut mjVISSTRING: [[*const ::std::os::raw::c_char; 3usize]; 32usize];
}
unsafe extern "C" {
    pub static mut mjRNDSTRING: [[*const ::std::os::raw::c_char; 3usize]; 10usize];
}
unsafe extern "C" {
    pub fn mj_defaultVFS(vfs: *mut mjVFS);
}
unsafe extern "C" {
    pub fn mj_addFileVFS(
        vfs: *mut mjVFS,
        directory: *const ::std::os::raw::c_char,
        filename: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn mj_addBufferVFS(
        vfs: *mut mjVFS,
        name: *const ::std::os::raw::c_char,
        buffer: *const ::std::os::raw::c_void,
        nbuffer: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn mj_deleteFileVFS(
        vfs: *mut mjVFS,
        filename: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn mj_deleteVFS(vfs: *mut mjVFS);
}
unsafe extern "C" {
    pub fn mj_loadXML(
        filename: *const ::std::os::raw::c_char,
        vfs: *const mjVFS,
        error: *mut ::std::os::raw::c_char,
        error_sz: ::std::os::raw::c_int,
    ) -> *mut mjModel;
}
unsafe extern "C" {
    pub fn mj_parseXML(
        filename: *const ::std::os::raw::c_char,
        vfs: *const mjVFS,
        error: *mut ::std::os::raw::c_char,
        error_sz: ::std::os::raw::c_int,
    ) -> *mut mjSpec;
}
unsafe extern "C" {
    pub fn mj_parseXMLString(
        xml: *const ::std::os::raw::c_char,
        vfs: *const mjVFS,
        error: *mut ::std::os::raw::c_char,
        error_sz: ::std::os::raw::c_int,
    ) -> *mut mjSpec;
}
unsafe extern "C" {
    pub fn mj_compile(s: *mut mjSpec, vfs: *const mjVFS) -> *mut mjModel;
}
unsafe extern "C" {
    pub fn mj_recompile(
        s: *mut mjSpec,
        vfs: *const mjVFS,
        m: *mut mjModel,
        d: *mut mjData,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn mj_saveLastXML(
        filename: *const ::std::os::raw::c_char,
        m: *const mjModel,
        error: *mut ::std::os::raw::c_char,
        error_sz: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn mj_freeLastXML();
}
unsafe extern "C" {
    pub fn mj_saveXMLString(
        s: *const mjSpec,
        xml: *mut ::std::os::raw::c_char,
        xml_sz: ::std::os::raw::c_int,
        error: *mut ::std::os::raw::c_char,
        error_sz: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn mj_saveXML(
        s: *const mjSpec,
        filename: *const ::std::os::raw::c_char,
        error: *mut ::std::os::raw::c_char,
        error_sz: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn mj_step(m: *const mjModel, d: *mut mjData);
}
unsafe extern "C" {
    pub fn mj_step1(m: *const mjModel, d: *mut mjData);
}
unsafe extern "C" {
    pub fn mj_step2(m: *const mjModel, d: *mut mjData);
}
unsafe extern "C" {
    pub fn mj_forward(m: *const mjModel, d: *mut mjData);
}
unsafe extern "C" {
    pub fn mj_inverse(m: *const mjModel, d: *mut mjData);
}
unsafe extern "C" {
    pub fn mj_forwardSkip(
        m: *const mjModel,
        d: *mut mjData,
        skipstage: ::std::os::raw::c_int,
        skipsensor: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn mj_inverseSkip(
        m: *const mjModel,
        d: *mut mjData,
        skipstage: ::std::os::raw::c_int,
        skipsensor: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn mj_defaultLROpt(opt: *mut mjLROpt);
}
unsafe extern "C" {
    pub fn mj_defaultSolRefImp(solref: *mut mjtNum, solimp: *mut mjtNum);
}
unsafe extern "C" {
    pub fn mj_defaultOption(opt: *mut mjOption);
}
unsafe extern "C" {
    pub fn mj_defaultVisual(vis: *mut mjVisual);
}
unsafe extern "C" {
    pub fn mj_copyModel(dest: *mut mjModel, src: *const mjModel) -> *mut mjModel;
}
unsafe extern "C" {
    pub fn mj_saveModel(
        m: *const mjModel,
        filename: *const ::std::os::raw::c_char,
        buffer: *mut ::std::os::raw::c_void,
        buffer_sz: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn mj_loadModel(filename: *const ::std::os::raw::c_char, vfs: *const mjVFS)
        -> *mut mjModel;
}
unsafe extern "C" {
    pub fn mj_deleteModel(m: *mut mjModel);
}
unsafe extern "C" {
    pub fn mj_sizeModel(m: *const mjModel) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn mj_makeData(m: *const mjModel) -> *mut mjData;
}
unsafe extern "C" {
    pub fn mj_copyData(dest: *mut mjData, m: *const mjModel, src: *const mjData) -> *mut mjData;
}
unsafe extern "C" {
    pub fn mj_resetData(m: *const mjModel, d: *mut mjData);
}
unsafe extern "C" {
    pub fn mj_resetDataDebug(
        m: *const mjModel,
        d: *mut mjData,
        debug_value: ::std::os::raw::c_uchar,
    );
}
unsafe extern "C" {
    pub fn mj_resetDataKeyframe(m: *const mjModel, d: *mut mjData, key: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn mj_markStack(d: *mut mjData);
}
unsafe extern "C" {
    pub fn mj_freeStack(d: *mut mjData);
}
unsafe extern "C" {
    pub fn mj_stackAllocByte(
        d: *mut mjData,
        bytes: usize,
        alignment: usize,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn mj_stackAllocNum(d: *mut mjData, size: usize) -> *mut mjtNum;
}
unsafe extern "C" {
    pub fn mj_stackAllocInt(d: *mut mjData, size: usize) -> *mut ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn mj_deleteData(d: *mut mjData);
}
unsafe extern "C" {
    pub fn mj_resetCallbacks();
}
unsafe extern "C" {
    pub fn mj_setConst(m: *mut mjModel, d: *mut mjData);
}
